JumpScript/tests/baselines/reference/parserCatchClauseWithTypeAnnotation1.errors.txt
tests/cases/conformance/parser/ecmascript5/CatchClauses/parserCatchClauseWithTypeAnnotation1.jump(2,13): error TS1196: Catch clause variable cannot have a type annotation.


==== tests/cases/conformance/parser/ecmascript5/CatchClauses/parserCatchClauseWithTypeAnnotation1.jump (1 errors) ====
    try {
    } catch (e: Error) {
                ~~~~~
!!! error TS1196: Catch clause variable cannot have a type annotation.
    }
    